serviceability/attach/ConcAttachTest.java failed "guarantee(!CheckJNICalls) failed: Attached JNI thread exited without being detached"

XMLWordPrintable

    • b17
    • 16
    • b06
    • x86_64, aarch64
    • linux

        The following test failed in the JDK20 CI:

        serviceability/attach/ConcAttachTest.java

        Here's a snippet from the log file:

        ----------stdout:(21/1864)----------
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/virtualMemoryTracker.cpp:363
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S8422/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6e89d8b9-911d-425b-9920-73a9bd0caece/runs/93ec339e-22f4-47ee-8e3a-ddf8e7c3dd20/workspace/open/src/hotspot/share/services/virtualMemoryTracker.cpp:363), pid=1381980, tid=1391565
        # guarantee(!CheckJNICalls) failed: Attached JNI thread exited without being detached
        #
        # JRE version: Java(TM) SE Runtime Environment (20.0+6) (fastdebug build 20-ea+6-268)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+6-268, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1b60ff7] VirtualMemoryTracker::add_reserved_region(unsigned char*, unsigned long, NativeCallStack const&, MEMFLAGS)+0x1037
        #
        # Core dump will be written. Default location: /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S19281/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6eacd903-d30d-438a-ba0a-9ab1aca97499/runs/7ce86dcf-cf49-464a-ac9e-92e9c6ca9f68/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1/scratch/3/core
        #
        # An error report file with more information is saved as:
        # /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S19281/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6eacd903-d30d-438a-ba0a-9ab1aca97499/runs/7ce86dcf-cf49-464a-ac9e-92e9c6ca9f68/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1/scratch/3/hs_err_pid1381980.log
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #
        result: Error. Agent communication error: java.io.EOFException; check console log for any additional details


        Here's the crashing thread's stack:

        --------------- T H R E A D ---------------

        Current thread (0x00007f73c003e1b0): JavaThread "process reaper" daemon [_thread_new, id=1391565, stack(0x00007f73fc8e9000,0x00007f73fc90f000)]

        Stack: [0x00007f73fc8e9000,0x00007f73fc90f000], sp=0x00007f73fc90dce0, free space=147k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1b60ff7] VirtualMemoryTracker::add_reserved_region(unsigned char*, unsigned long, NativeCallStack const&, MEMFLAGS)+0x1037
        V [libjvm.so+0x1a9f10f] ThreadStackTracker::new_thread_stack(void*, unsigned long, NativeCallStack const&)+0x4f
        V [libjvm.so+0x1a876f8] Thread::register_thread_stack_with_NMT()+0x88
        V [libjvm.so+0x1a88ded] Thread::call_run()+0x7d
        V [libjvm.so+0x174bf14] thread_native_entry(Thread*)+0x104

              Assignee:
              David Holmes
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              14 Start watching this issue

                Created:
                Updated:
                Resolved: